--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "apexcharts": "^3.43.0",
+    "flag-icons": "^6.11.1",
     "ofetch": "^1.3.3",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
