--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.0.0",
     "apexcharts": "^3.43.0",
     "date-fns": "^2.30.0",
+    "export-to-csv": "^1.2.1",
     "flag-icons": "^6.11.1",
     "ofetch": "^1.3.3",
     "pinia": "^2.0.11",
