--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.9",
+    "@vueuse/core": "^10.7.0",
     "apexcharts": "^3.44.2",
     "date-fns": "^2.30.0",
     "export-to-csv": "^1.2.1",
