--- a/package.json
+++ b/package.json
@@ -15,31 +15,32 @@
   "dependencies": {
     "@quasar/extras": "^1.16.9",
     "@vueuse/core": "^10.7.0",
-    "apexcharts": "^3.44.2",
-    "date-fns": "^2.30.0",
-    "export-to-csv": "^1.2.1",
-    "flag-icons": "^7.0.3",
+    "apexcharts": "^3.45.1",
+    "date-fns": "^3.0.6",
+    "export-to-csv": "^1.2.2",
+    "flag-icons": "^7.1.0",
+    "jwt-decode": "^4.0.0",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
-    "quasar": "^2.14.1",
-    "vue": "^3.3.10",
+    "quasar": "^2.14.2",
+    "vue": "^3.3.13",
     "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5",
     "vue3-apexcharts": "^1.4.4",
-    "vue3-toastify": "^0.1.14"
+    "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@quasar/app-vite": "^1.7.1",
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.19.2",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
   "engines": {
