--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Quasar Project",
   "productName": "DP IS",
   "author": "BP",
+  "type": "module",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
@@ -14,17 +15,17 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.9",
-    "@vueuse/core": "^10.7.1",
+    "@vueuse/core": "^10.7.2",
     "apexcharts": "^3.45.1",
-    "date-fns": "^3.0.6",
+    "date-fns": "^3.2.0",
     "export-to-csv": "^1.2.2",
-    "flag-icons": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
-    "vue": "^3.4.3",
-    "vue-i18n": "^9.8.0",
+    "vue": "^3.4.14",
+    "vue-i18n": "^9.9.0",
+    "vue-inline-svg": "^3.1.2",
     "vue-router": "^4.2.5",
     "vue3-apexcharts": "^1.4.4",
     "vue3-toastify": "^0.2.1"
@@ -32,20 +33,22 @@
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
-    "@quasar/app-vite": "^1.7.1",
-    "@types/node": "^20.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@quasar/app-vite": "^2.0.0-alpha.44",
+    "@types/node": "^20.11.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.20.1",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3"
+    "lightningcss": "^1.23.0",
+    "prettier": "^3.2.2",
+    "typescript": "^5.3.3",
+    "vite-svg-loader": "^5.1.0"
   },
   "engines": {
-    "node": "^18 || ^16 || ^14.19",
+    "node": "^24 || ^22 || ^20 || ^18",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
