--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.2.0",
     "export-to-csv": "^1.2.2",
     "jwt-decode": "^4.0.0",
+    "node-fetch": "^2.6.7",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
@@ -35,6 +36,7 @@
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.0.0-alpha.44",
     "@types/node": "^20.11.2",
+    "@types/node-fetch": "^2.6.10",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.16",
