--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
+    "lint": "eslint --ext .js,.ts,.vue,.json ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
@@ -32,7 +32,7 @@
     "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
-    "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "^3.0.0-next.5",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.0.0-alpha.44",
     "@types/node": "^20.11.2",
