--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,6 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": ["source.fixAll.eslint"],
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "vue",
-    "json"
-  ],
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "vue", "json"],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
