--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     },
-    "types": ["@intlify/unplugin-vue-i18n/messages"]
-  }
+    "types": ["@intlify/unplugin-vue-i18n/messages"],
+  },
 }
