--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pinia": "^2.1.7",
     "quasar": "^2.14.3",
     "vue": "^3.4.15",
+    "vue-draggable-plus": "^0.3.5",
     "vue-i18n": "^9.9.1",
     "vue-inline-svg": "^3.1.2",
     "vue-router": "^4.2.5",
