--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
     "quasar": "^2.14.3",
-    "vue": "^3.4.15",
+    "vue": "^3.4.18",
     "vue-draggable-plus": "^0.3.5",
     "vue-i18n": "^9.9.1",
     "vue-inline-svg": "^3.1.2",
@@ -35,18 +35,18 @@
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^3.0.0-next.5",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
-    "@quasar/app-vite": "^2.0.0-alpha.46",
-    "@types/node": "^20.11.16",
+    "@quasar/app-vite": "^2.0.0-beta.1",
+    "@types/node": "^20.11.17",
     "@types/node-fetch": "^2.6.11",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.21.1",
     "lightningcss": "^1.23.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3",
     "vite-svg-loader": "^5.1.0"
   },
