--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-inline-svg": "^3.1.2",
     "vue-router": "^4.3.0",
     "vue3-apexcharts": "^1.5.2",
+    "vue3-google-login": "^2.0.25",
     "vue3-toastify": "^0.2.1",
     "vuedraggable": "^4.1.0"
   },
