--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
     "quasar": "^2.14.7",
+    "vite": "^5.1.6",
     "vue": "^3.4.21",
     "vue-draggable-plus": "^0.3.5",
     "vue-i18n": "^9.10.1",
